MM 1.16.2 in openwrt: SEGFAULT after attempting to access NULL pointer
Mon Apr 5 19:25:58 2021 daemon.debug [6528]: opening device...
Mon Apr 5 19:25:58 2021 daemon.debug [6528]: [/dev/cdc-wdm0] Read max control message size from descriptors file: 4096
Mon Apr 5 19:25:58 2021 daemon.debug [6528]: [/dev/cdc-wdm0] channel destroyed
Mon Apr 5 19:25:59 2021 daemon.info [6528]: <info> [device /sys/devices/platform/1e1c0000.xhci/usb2/2-1] creating modem with plugin 'dell' and '6' ports
Mon Apr 5 19:25:59 2021 daemon.info [6528]: <info> [base-manager] modem for device '/sys/devices/platform/1e1c0000.xhci/usb2/2-1' successfully created
Mon Apr 5 19:25:59 2021 daemon.debug [6528]: opening device...
Mon Apr 5 19:25:59 2021 daemon.debug [6528]: [/dev/cdc-wdm0] Read max control message size from descriptors file: 4096
Mon Apr 5 19:26:00 2021 daemon.warn [6528]: <warn> [modem0/sim0] couldn't load list of emergency numbers: Failed to parse CRSM query result '+CRSM: 148,8,""'
Mon Apr 5 19:26:00 2021 kern.info kernel: [ 89.105219] do_page_fault(): sending SIGSEGV to ModemManager for invalid read access from 00000000
Mon Apr 5 19:26:00 2021 kern.info kernel: [ 89.114208] epc = 00000000 in ModemManager[400000+f3000]
Mon Apr 5 19:26:00 2021 kern.info kernel: [ 89.119566] ra = 776943b5 in libmm-shared-foxconn.so[77693000+12000]
Mon Apr 5 19:26:00 2021 daemon.info procd: Instance modemmanager::instance1 s in a crash loop 6 crashes, 7 seconds since last crash